--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,25 @@
 <app-header></app-header>
 <main>
-<app-feature-section></app-feature-section>
+  <section class="end-banner">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <h2>Want to Join us</h2>
+          <i class="fa fa-users"></i>
+          <a routerLink="">Careers</a>
+        </div>
+        <div class="col-md-4 text-center">
+            <h2>Media inquiry?</h2>
+            <i class="fa fa-users"></i>
+            <a routerLink="">Press</a>
+          </div>
+          <div class="col-md-4 text-center">
+              <h2>Have questions?</h2>
+              <i class="fa fa-users"></i>
+              <a routerLink="">Suportp</a>
+            </div>
+      </div>
+    </div>
+  </section>
 </main>
 <app-footer></app-footer>
