--- a/src/app/doctor-section/doctor-section.component.html
+++ b/src/app/doctor-section/doctor-section.component.html
@@ -5,22 +5,22 @@
      <div class="col-md-3 col-sm-12 box left">
        <img src="assets/images/flower.png" alt="">
        <p>Get the shot, not the flu.</p>
-       <a href="#">Book a flu shot</a>
+       <a >Book a flu shot</a>
      </div>
      <div class="col-md-3 col-sm-12 box right">
        <img src="assets/images/appointment.png" alt="">
        <p>Been putting off that physical?</p>
-       <a href="#">Book it now</a>
+       <a >Book it now</a>
      </div>
      <div class="col-md-3 col-sm-12 box left">
        <img src="assets/images/nurse.png" alt="">
        <p>Feeling low when the pollen count is high?</p>
-       <a href="#">Find an allergist</a>
+       <a>Find an allergist</a>
      </div>
      <div class="col-md-3 col-sm-12  box right">
        <img src="assets/images/medical_sign.png" alt="">
        <p>You're not alone.</p>
-       <a href="#">Book a flu shot</a>
+       <a>Book a flu shot</a>
      </div>
    </div>
 
