--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -49,7 +49,7 @@
     </div>
      </div>
           <ng-template #content let-c="close">
-            <div class="container">
+            <div class="container login__modals">
             <div class="modal_popup">
               <button type="button" class="close" aria-label="Close" (click)="c('Cross click')">
                   <span class="cross" aria-hidden="true">&times;</span>
