--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,7 +1,7 @@
-<div class="jumbotron" >
+<div class="container">
   <div class="row">
       <div class="col-md-12">
-          <span class="heading"><h3>ZocDoc</h3></span>
+          <span class="heading"><h3>Docapp</h3></span>
           <form  [formGroup]="loginForms">
             <div class="form-group">
               <label class="control_label">Email</label>
