--- a/src/app/about/joinzocdoc/join-form/join-form.component.html
+++ b/src/app/about/joinzocdoc/join-form/join-form.component.html
@@ -3,27 +3,28 @@
     <div class="row max-width">
         <div class="col-sm text-center">
           <div class="new__join">
-            <h2>Join Zocdoc now</h2>
+            <h2>Join Docapp now</h2>
           </div>
         </div>
     </div>
         <div class="row max-width">
           <div class="wFormContainer">
+            <form [formGroup]="joinForm">
               <div class="row">
                   <div class="oneField field-container-D">
                       <label  class="label preField reqMark">First Name<sup class="design_star">*</sup></label>
-                      <div class="inputWrapper"><input type="text" name="firstname" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
+                      <div class="inputWrapper"><input type="text" name="firstname" formControlName="firstName" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
                   </div>
                   <div class="oneField field-container-D">
                       <label  class="label preField reqMark">Last Name<sup class="design_star">*</sup></label>
-                      <div class="inputWrapper"><input type="text"  name="lastname" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
+                      <div class="inputWrapper"><input type="text"  name="lastname" formControlName="lastName" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
                   </div>
              </div>
              <div class="row">
                 <div class="oneField field-container-D">
                     <label  class="label preField reqMark">Your Specialty<sup class="design_star">*</sup></label>
                     <div class="inputWrapper">
-                      <select title="Your Speciality <sup class='design_star'>*</sup>" class="exclude-from-playback required">
+                      <select title="Your Speciality <sup class='design_star'>*</sup>" formControlName="speciality" name="speciality" class="exclude-from-playback required">
                         <option value="">Please Select ...</option>
                         <option  *ngFor="let special of speciality" [value]="special.value">{{special.name}}</option>
                       </select>
@@ -31,22 +32,23 @@
                 </div>
                 <div class="oneField field-container-D">
                     <label  class="label preField reqMark">Your Direct Phone Number<sup class="design_star">*</sup></label>
-                    <div class="inputWrapper"><input type="text" autoformat="###-###-####" name="lastname" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
+                    <div class="inputWrapper"><input type="text" autoformat="###-###-####" name="mobile" formControlName="mobile" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
                 </div>
            </div>
            <div class="row">
               <div class="oneField field-container-D">
                   <label  class="label preField reqMark">ZIP Code<sup class="design_star">*</sup></label>
-                  <div class="inputWrapper"><input type="text" name="firstname" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
+                  <div class="inputWrapper"><input type="text" name="zipcode" formControlName="zipcode" value="" aria-required="true"  data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
               </div>
               <div class="oneField field-container-D">
                   <label  class="label preField reqMark">Your Email<sup class="design_star">*</sup></label>
-                  <div class="inputWrapper"><input type="text"  name="lastname" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
+                  <div class="inputWrapper"><input type="text"  name="email" formControlName="email" value="" aria-required="true"  data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
               </div>
          </div>
           <div class="row">
-              <input type="submit" data-label="Get Started" class="primaryAction zocdoc__form_submit" id="submit_button" value="Get Started">
+              <input type="submit" data-label="Get Started" class="primaryAction zocdoc__form_submit" id="submit_button" value="Get Started" (click)="addjoinForm(firstName.value,lastName.value,speciality.value,mobile.value,zipcode.value,email.value)">
           </div>
+        </form>
            </div>
          </div>
       </div>
