--- a/src/app/about/joinzocdoc/join-form/join-form.component.html
+++ b/src/app/about/joinzocdoc/join-form/join-form.component.html
@@ -1,55 +1,80 @@
 <section id="target" class="zocdoc_join_form" style="background-color: #bcd0e7">
-  <div class="container" >
-    <div class="row max-width">
-        <div class="col-sm text-center">
-          <div class="new__join">
-            <h2>Join Docapp now</h2>
+    <div class="container" >
+      <div class="row max-width">
+          <div class="col-sm text-center">
+            <div class="new__join">
+              <h2>Join Docapp now</h2>
+            </div>
           </div>
-        </div>
-    </div>
-        <div class="row max-width">
-          <div class="wFormContainer">
-            <form [formGroup]="joinForm">
-              <div class="row">
-                  <div class="oneField field-container-D">
-                      <label  class="label preField reqMark">First Name<sup class="design_star">*</sup></label>
-                      <div class="inputWrapper"><input type="text" name="firstname" formControlName="firstName" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
-                  </div>
-                  <div class="oneField field-container-D">
-                      <label  class="label preField reqMark">Last Name<sup class="design_star">*</sup></label>
-                      <div class="inputWrapper"><input type="text"  name="lastname" formControlName="lastName" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
-                  </div>
-             </div>
-             <div class="row">
-                <div class="oneField field-container-D">
-                    <label  class="label preField reqMark">Your Specialty<sup class="design_star">*</sup></label>
-                    <div class="inputWrapper">
-                      <select title="Your Speciality <sup class='design_star'>*</sup>" formControlName="speciality" name="speciality" class="exclude-from-playback required">
-                        <option value="">Please Select ...</option>
-                        <option  *ngFor="let special of speciality" [value]="special.value">{{special.name}}</option>
-                      </select>
-                    </div>
-                </div>
-                <div class="oneField field-container-D">
-                    <label  class="label preField reqMark">Your Direct Phone Number<sup class="design_star">*</sup></label>
-                    <div class="inputWrapper"><input type="text" autoformat="###-###-####" name="mobile" formControlName="mobile" value="" aria-required="true" title="First Name" data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
-                </div>
-           </div>
-           <div class="row">
-              <div class="oneField field-container-D">
-                  <label  class="label preField reqMark">ZIP Code<sup class="design_star">*</sup></label>
-                  <div class="inputWrapper"><input type="text" name="zipcode" formControlName="zipcode" value="" aria-required="true"  data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
-              </div>
-              <div class="oneField field-container-D">
-                  <label  class="label preField reqMark">Your Email<sup class="design_star">*</sup></label>
-                  <div class="inputWrapper"><input type="text"  name="email" formControlName="email" value="" aria-required="true"  data-dataset-allow-free-responses="" class="exclude-from-playback required"></div>
-              </div>
-         </div>
-          <div class="row">
-              <input type="submit" data-label="Get Started" class="primaryAction zocdoc__form_submit" id="submit_button" value="Get Started" (click)="addjoinForm(firstName.value,lastName.value,speciality.value,mobile.value,zipcode.value,email.value)">
-          </div>
-        </form>
-           </div>
-         </div>
       </div>
-</section>
+        <form class="join_doc" [formGroup]="getStartedForm">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group input__text">
+                    <label class="label">First Name</label>
+                    <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"  #firstName />
+                    <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback validate__feedback">
+                        <div *ngIf="f.firstName.errors.required">First Name is required</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group input__text">
+                      <label class="label">Last Name</label>
+                      <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" #lastName />
+                      <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback validate__feedback">
+                          <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group input__text">
+                        <label class="label">Your Specialty</label>
+                       <select formControlName="specialities"   class="form-control" [ngClass]="{ 'is-invalid': submitted && f.specialities.errors }" #specialities >
+                         <option selected value="Please select…">Please select…</option>
+                         <option *ngFor="let special of speciality"[value]="special.value">{{special.name}}</option>
+                       </select>
+                       <div *ngIf="submitted && f.specialities.errors" class="invalid-feedback validate__feedback">
+                        <div *ngIf="f.specialities.errors.required">Please Choose Your speciality</div>
+                      </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group input__text">
+                          <label class="label">Your Direct Phone Number</label>
+                          <input type="text" formControlName="mobile" class="form-control docapp_join_form" maxlength="10" [ngClass]="{ 'is-invalid': submitted && f.mobile.errors }" #mobile/>
+                          <div *ngIf="submitted && f.mobile.errors" class="invalid-feedback validate__feedback">
+                            <div *ngIf="f.mobile.errors.required">Mobile Number is Required</div>
+                            <div *ngIf="f.mobile.errors.minlength">Mobile Number must be 10 Digit only</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group input__text">
+                            <label class="label">ZIP Code</label>
+                            <input type="text" formControlName="zipcode" class="form-control" maxlength="6" [ngClass]="{ 'is-invalid': submitted && f.zipcode.errors }"  #zipcode />
+                            <div *ngIf="submitted && f.zipcode.errors" class="invalid-feedback validate__feedback">
+                                <div *ngIf="f.zipcode.errors.required">zipcode is required</div>
+                                <div *ngIf="f.zipcode.errors.minlength">zipcode must be 6 Digit only</div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <div class="form-group input__text">
+                              <label class="label">Your Email</label>
+                              <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" #email />
+                              <div *ngIf="submitted && f.email.errors" class="invalid-feedback validate__feedback">
+                                  <div *ngIf="f.email.errors.required">Email is required</div>
+                                  <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                              </div>
+                          </div>
+                        </div>
+                       <div class="col-md-12 text-center">
+                         <button class="btn btn-primary get__started" type="submit" (click)="joinFormStarted(firstName.value,lastName.value,specialities.value,mobile.value,zipcode.value,email.value)">{{button_text}}</button>
+                       </div>
+                </div>
+              </div>
+            </form>
+        </div>
+  </section>
