--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -207,15 +207,10 @@ a.cta {
   vertical-align: top;
     position: relative;
   }
+
   .oneField.field-container-D {
   max-width: 100%;
   margin: 14px;
-  }
-  .new__join h2 {
-      font-size: 34px;
-      line-height: 44px;
-      padding-bottom: 20px;
-      font-family: 'sharp-sans-bold', Arial, sans-serif;
   }
   input.exclude-from-playback.required {
     width: 306px;
@@ -227,6 +222,26 @@ a.cta {
     border-radius: 3px;
     margin: 14px auto 20px;
 }
+select.exclude-from-playback.required {
+  width: 306px;
+  height: 44px;
+  padding: 0 10px;
+  color: #00234B;
+  background-color: #dce7f2;
+  border: transparent;
+  border-radius: 3px;
+  margin: 14px auto 20px;
+}
+/* .docapp_join_form::-webkit-inner-spin-button, .docapp_zipcode::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+} */
+  .new__join h2 {
+      font-size: 34px;
+      line-height: 44px;
+      padding-bottom: 20px;
+      font-family: 'sharp-sans-bold', Arial, sans-serif;
+  }
 .primaryAction.zocdoc__form_submit {
   height: auto;
   width: auto;
@@ -247,6 +262,44 @@ label.label.preField.reqMark {
   font-size: 18px;
   font-family: "sharp-sans-semibold", Arial, sans-serif;
 }
+.zocdoc_join_form .join_doc .label{display: block;}
+.join_doc{    width: 100%;
+  max-width: 62%;
+  margin: 0 auto;}
+  .zocdoc_join_form .join_doc input, .zocdoc_join_form .join_doc select{display: block;
+    width: 100%; width: 306px;
+    height: 44px;
+    padding: 0 10px;
+    color: #00234B;
+    background-color: #dce7f2;
+    border: transparent;
+    border-radius: 3px;
+    margin: 14px 0 20px;}
+    button.btn.btn-primary.get__started {
+      height: auto;
+      width: auto;
+      vertical-align: middle;
+      background-color: #06b09a;
+      padding: 19px 68px;
+      opacity: 1;
+      color: #ffffff;
+      border: none;
+      display: block;
+      margin: 42px auto 24px;
+      cursor: pointer;
+      font-size: 18px;
+      border-radius: 0px;
+      font-family: "sharp-sans-semibold", Arial, sans-serif;
+  }
+  .form-group.input__text {
+    max-width: 100%;
+    margin: 14px;
+}
+.join_doc label.label {
+  font-size: 18px;
+  font-family: "sharp-sans-semibold", Arial, sans-serif;
+}
+
 /*start Docapp join 02-05-2019*/
 .text-col.col-sm.order-sm-last.zocdoc_content h1 {
   font-size: 40px;
@@ -367,16 +420,7 @@ p.card_decription_card {
   line-height: 20px;
   text-align: center;
 }
-select.exclude-from-playback.required {
-  width: 306px;
-  height: 44px;
-  padding: 0 10px;
-  color: #00234B;
-  background-color: #dce7f2;
-  border: transparent;
-  border-radius: 3px;
-  margin: 14px auto 20px;
-}
+
 sup.design_star {
   color: red;
   font-weight: 1000;
@@ -415,15 +459,10 @@ img.header_logo.new__logo {position: relative;left: 14%;}
       color: #000;}
   .perk ul{list-style-type: none; columns: 2;}
   .perk ul li{margin-bottom: 15px;}
-  .job_open a{    font-family: 'sharp-sans-medium',Arial,sans-serif;
-    color: #27baa7;
-    display: block; font-size:18px; margin-bottom:10px;}
+  .job_open a{font-family: 'sharp-sans-medium',Arial,sans-serif;color: #27baa7;display: block; font-size:18px; margin-bottom:10px;}
     .job_open{margin-bottom:30px;}
-    .container a:hover.btn-view {
-      background: #27baa7;
-      color: #fff;
-      text-decoration: none;
-  }
+    .container a:hover.btn-view {background: #27baa7;color: #fff;text-decoration: none;}
+  .invalid-feedback.validate__feedback { position: relative;bottom: 12px;font-weight: 1000;font-size: 18px;}
 /*end*/
 /*14 - 5 - 2019 start faq */
 #services{padding:40px 0;}
@@ -465,6 +504,13 @@ a.login__here {cursor: pointer;color: #06b09a !important;position: relative;left
 .end-banner a{ border: 0;width: 160px;font-size: 15px;color: #fff;font-weight: 600;border-radius: 0;border-color: transparent;height: 54px;background: #06b09a;
   display: inline-block; line-height: 54px;}
   /*17-05-2019 End*/
+/*Thank you Page 21-05-2019*/
+section.thankyou_page {position: relative;top: 100px;color: #06b09a;}
+img.header_join_logo {width: 17%;position: relative;top: 24px;}
+img.join__logo {width: 7%;}
+span.thankyou__content h3 {font-size: 16px;color:#06b09a;font-family: "sharp-sans-medium", Arial, sans-serif;font-size: 30px;font-weight: 1000;}
+span.thankyou__heading h3 {margin-top: 18px;font-size: 49px;}
+/*End 21-05-2019*/
 /* MEDIA QUERY */
 @media(max-width: 1199px){
 #hospital_schedule .box a{font-size: 14px;}
